--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
-    "format": "prettier --write ./src"    
+    "format": "prettier --write ./src"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "eslint": "^8.57.1",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "sass": "^1.79.3"
   }
 }
