--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "eslint": "^8.57.1",
     "prettier": "^3.3.3",
-    "sass": "^1.79.3"
+    "sass": "^1.79.3",
+    "typescript": "^5.6.2"
   }
 }
