--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "axios": "^1.7.7",
     "eslint": "^8.57.1",
     "prettier": "^3.3.3",
     "sass": "^1.79.3",
