--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
   },
   "devDependencies": {
     "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
     "eslint": "^8.57.1",
     "prettier": "^3.3.3",
+    "react-chartjs-2": "^5.2.0",
     "sass": "^1.79.3",
     "typescript": "^5.6.2"
   }
